syntax = "proto3";

option csharp_namespace = "MemberShip.Command.v1";




service MemberShip {
  
  rpc SendInvitation   (SendInvitationRequest  ) returns (InvitationResponse);
  rpc CancelInvitation (CancelInvitationRequest) returns (InvitationResponse);
  rpc AcceptInvitation (AcceptInvitationRequest) returns (InvitationResponse);
  rpc RejectInvitation (RejectInvitationRequest) returns (InvitationResponse);
}


message SendInvitationRequest {
  string accountId = 1;
  string subscrptionId = 2;
  string memberId = 3;
  string userId = 4;
}
message CancelInvitationRequest {
  string accountId = 1;
  string subscrptionId = 2;
  string memberId = 3;
  string userId = 4;
}
message AcceptInvitationRequest {
  string accountId = 1;
  string subscrptionId = 2;
  string memberId = 3;
  string userId = 4;
}
message RejectInvitationRequest {
  string accountId = 1;
  string subscrptionId = 2;
  string memberId = 3;
  string userId = 4;
}

message InvitationResponse {
  string id = 1;
  string message = 2;
}
